# eGradu

./: db.sqlite3  pyproject.toml
egradu/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
egradu/migrations/: 0001_initial.py  0002_documentcomments_commented_document.py  0003_remove_plagiarismcheck_report.py  0004_evaluation_other_reviewer.py  0005_alter_evaluation_other_reviewer.py
egradu/templates/egradu/: document_view.html  plagiarism.html  project.html  project_view.html  review.html  second_review.html  student_index.html  teacher_index.html  upload_document.html
media/: egradu_GnJWE0Y.odt
project/: asgi.py  settings.py  urls.py  wsgi.py
