[tool.poetry]
name = "egradu"
version = "0.1.0"
description = ""
authors = ["William Lindholm <wilindho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.7"
django-enumfield = "^3.1"
django-extensions = "^3.2.1"
django-environ = "^0.10.0"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
